--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/ImmiStress
+spring.datasource.url=jdbc:mysql://localhost:3306/YourDataBase
 spring.datasource.username=root
-spring.datasource.password=Andy199588
+spring.datasource.password=YourPassWord
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
